--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  
+  ><head>
    <title>Simon Bayle's profile</title>
    <meta name="description" content="This is the profile of Simon">
     <meta charset="UTF-8">
@@ -13,14 +14,15 @@
 
   <div class="container">
    <div class="card-white" id="introduction">
-   <H1>Hello, I'm Simon😄</H1>
+   <H1>Hello, I'm Simon 😎</H1>
    <img src="images/simon.jpg" class="img-circle" width="175px" alt="Simon Bayle">
-  	<p>Je suis étudiant à l'EMLV, j'habite à Garches et je supporte l'équipe de Monaco depuis mes 6 ans🔴⚪️
+  	<p>Je suis étudiant à l'EMLV, j'habite à Garches et je supporte l'équipe de Monaco depuis mes 6 ans 🔴⚪️
     </p>
 		
 
-    <a href="#" class="btn-blue" "https://www.asmonaco.com/" target="_blank">Monaco FC</a>
+    <a href="https://www.asmonaco.com" target="_blank" class="btn-blue">Monaco FC</a>
    </div>
+  
   <div class="card-white">
   <H2>Hockey sur glace 🏒 </H2>
   <p>Je suis passionné par le <strong>hockey sur glace</strong>
